--- a/Master_Blogger/Master_Blogger/Master_Blogger.csproj
+++ b/Master_Blogger/Master_Blogger/Master_Blogger.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MB.Application.Contracts\MB.Application.Contracts.csproj" />
+    <ProjectReference Include="..\MB.Infrastructure.Core\MB.Infrastructure.Core.csproj" />
   </ItemGroup>
 
 </Project>
