--- a/Master_Blogger/Master_Blogger/appsettings.json
+++ b/Master_Blogger/Master_Blogger/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MasterBloggerDB": "Data Source=.;Initial Catalog=MasterBloger;Integrated Security=true"
+
+  }
 }
