--- a/Master_Blogger/Master_Blogger/appsettings.json
+++ b/Master_Blogger/Master_Blogger/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MasterBloggerDB": "Data Source=.;Initial Catalog=MasterBloger;Integrated Security=true"
+    "MasterBloggerDB": "Data Source=.;Initial Catalog=MasterBlogger;Integrated Security=true"
 
   }
 }
